# coding_standards

./: .gitignore  README.md  data_explore.py  main.py  pyproject.toml
coding_standards/: EDA.py  __init__.py  data_transformations.py
coding_standards/models/: xgb.py
tests/: test_coding_standards.py
