[tool.poetry]
name = "coding_standards"
version = "0.1.0"
description = ""
authors = ["petar-hristov <phristov1997@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.4"
sklearn = "^0.0"
seaborn = "0.11.2"
statsmodels = "^0.13.2"
pandas-profiling = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
